--- a/shop.html
+++ b/shop.html
@@ -15,7 +15,7 @@
     
     <div id="nav-wrapper">
         <div id="navbar">
-            <a href="home.html" id="nav-logo"><img src="images/g-setup.png" alt="" ></a>
+            <a href="index.html" id="nav-logo"><img src="images/g-setup.png" alt="" ></a>
             <nav id="nav-links">
                 <a href="shop.html">Shop</a>
                 <a href="info.html">Info</a>
