--- a/about.html
+++ b/about.html
@@ -99,5 +99,9 @@
         </div>
         <p id="copyright">© G-Setup all rights reserved</p>
     </footer>
+
+    <script src="scripts/navbar.js"></script>
+    <script src="scripts/filtration.js"></script>
+    <script src="scripts/cart.js"></script>
 </body>
 </html>
