--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
     </footer>
 
     <script src="scripts/navbar.js"></script>
+    <script src="scripts/filtration.js"></script>
     <script src="scripts/cart.js"></script>
-    <script src="scripts/home.js"></script>
 
 </body>
 </html>
