--- a/info.html
+++ b/info.html
@@ -14,7 +14,7 @@
 <body>
     <div id="nav-wrapper">
         <div id="navbar">
-            <a href="index.html" id="nav-logo"><img src="images/g-setup.png" alt="" ></a>
+            <a href="index.html" id="nav-logo"><img src="images/g-setup.png" alt=""></a>
             <nav id="nav-links">
                 <a href="shop.html">Shop</a>
                 <a href="info.html">Info</a>
@@ -138,5 +138,9 @@
         </div>
         <p id="copyright">© G-Setup all rights reserved</p>
     </footer>
+
+    <script src="scripts/navbar.js"></script>
+    <script src="scripts/filtration.js"></script>
+    <script src="scripts/cart.js"></script>
 </body>
 </html>
