--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     <script src="scripts/navbar.js"></script>
     <script src="scripts/filtration.js"></script>
     <script src="scripts/cart.js"></script>
+    <script src="scripts/home.js"></script>
 
 </body>
 </html>
